<resources>
    <string name="app_name">DietApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


    <string name="menu_home">Home</string>
    <string name="menu_dishes">Dishes</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_products">Products</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
</resources>