<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/baseline_emoji_food_beverage_24"
            android:title="@string/menu_products" />

        <item
            android:id="@+id/nav_dishes"
            android:icon="@drawable/baseline_fastfood_24"
            android:title="@string/menu_dishes" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/baseline_directions_run_24"
            android:title="@string/menu_activities" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/baseline_leaderboard_24"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>